--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <header>
-        <section class="grow">
-            <img src="./assets/images/header-shape.png" alt="yellow curve" />
+        <section class="curve">
+            <!-- <img src="./assets/images/header-shape.png" alt="yellow curve" /> -->
         </section>
 
         <nav>
@@ -26,9 +26,9 @@
     </header>
 
     <main>
-        <div>
-            <p>Bring the c lean directly to you!</p>
-            <img src="./assets/images/dog-car.jpg" alt="dog with head out of car" />
+        <div class="carDog">
+            <img id="car-dog" src="./assets/images/dog-car.jpg" alt="dog with head out of car" />
+            <div class="bring-to-you">Bring the clean directly to you!</p>
         </div>
         <div>
             <h2>How does it work?</h2>
@@ -41,8 +41,8 @@
         </div>
 
         <aside>
-            <img src="./assets/images/dog-animated.png" alt="animated dog" />
-            <img src="./assets/images/spick-n-span.png" alt="spick-n-span" />
+            <!-- <img src="./assets/images/dog-animated.png" alt="animated dog" />
+            <img src="./assets/images/spick-n-span.png" alt="spick-n-span" /> -->
             <div id="green-box">
                 <p>PAMPER YOUR PET HERE</p>
             </div>
