fixing img sizes

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <div>
             <h2>How does it work?</h2>
             <div class="steps">
-                <p><img src="./assets/images/calendar.png" alt="calendar" />Schedule an appointment for the desired service</p>
-                <p><img src="./assets/images/car.png" alt="car" />We confirm the time and place and drive to you</p>
-                <p><img src="./assets/images/sponge.png" alt="sponge" />Sit back while your pet is cleaned and pampered</p>
-                <p><img src="./assets/images/dog-animaged-sm.png" alt="animated dog small" /></p>
+                <p><img id="calendar-pic" src="./assets/images/calendar.png" alt="calendar" />Schedule an appointment for the desired service</p>
+                <p><img id="car-pic" src="./assets/images/car.png" alt="car" />We confirm the time and place and drive to you</p>
+                <p><img id="sponge-pic" src="./assets/images/sponge.png" alt="sponge" />Sit back while your pet is cleaned and pampered</p>
+                <p><img id="animated-dog-pic" src="./assets/images/dog-animaged-sm.png" alt="animated dog small" /></p>
             </div>
         </div>
 
