fixing colors css

--- a/index.html
+++ b/index.html
@@ -26,31 +26,44 @@
     </header>
 
     <main>
-        <div class="carDog">
-            <img id="car-dog" src="./assets/images/dog-car.jpg" alt="dog with head out of car" />
-            <div class="bring-to-you">Bring the clean directly to you!</p>
-        </div>
-        <div>
-            <h2>How does it work?</h2>
-            <div class="steps">
-                <p><img id="calendar-pic" src="./assets/images/calendar.png" alt="calendar" />Schedule an appointment for the desired service</p>
-                <p><img id="car-pic" src="./assets/images/car.png" alt="car" />We confirm the time and place and drive to you</p>
-                <p><img id="sponge-pic" src="./assets/images/sponge.png" alt="sponge" />Sit back while your pet is cleaned and pampered</p>
-                <p><img id="animated-dog-pic" src="./assets/images/dog-animaged-sm.png" alt="animated dog small" /></p>
-            </div>
-        </div>
-
+        <section class="main-content">
+            <div class="carDog">
+                <img id="car-dog" src="./assets/images/dog-car.jpg" alt="dog with head out of car" />
+                <div class="bring-to-you">Bring the clean directly to you!</p>
+                </div>
+                <div>
+                    <h2>How does it work?</h2>
+                    <div class="steps">
+                        <img id="calendar-pic" src="./assets/images/calendar.png" alt="calendar" />
+                        <p>Schedule an appointment for the desired service</p>
+                        <img id="car-pic" src="./assets/images/car.png" alt="car" />
+                        <p>We confirm the time and place and drive to you</p>
+                        <img id="sponge-pic" src="./assets/images/sponge.png" alt="sponge" />
+                        <p>Sit back while your pet is cleaned and pampered</p>
+                        <img id="animated-dog-pic" src="./assets/images/dog-animaged-sm.png" alt="animated dog small" />
+                        <p>Your best friend is Spick n' Span!</p>
+                    </div>
+                </div>
+        </section>
         <aside>
-            <!-- <img src="./assets/images/dog-animated.png" alt="animated dog" />
-            <img src="./assets/images/spick-n-span.png" alt="spick-n-span" /> -->
-            <div id="green-box">
-                <p>PAMPER YOUR PET HERE</p>
-            </div>
+            <section>
+                <img id="cartoon-dog" src="./assets/images/dog-animated.png" alt="animated dog" />
+            </section>
+            <section>
+                <img id="spick-n-span-logo" src="./assets/images/spick-n-span.png" alt="spick-n-span" />
+            </section>
+            <section>
+                <div id="green-box">
+                    <p>PAMPER YOUR PET HERE</p>
+                </div>
+            </section>
         </aside>
     </main>
 
     <footer id="copyright">
-        <p>Copyright 2125 Spick n' Span, LLC. All Rights Reserved. PO Box 55555 Middle, Indiana 43208 +1.888.555. 1234</p>
+        <p>Copyright 2125 Spick n' Span, LLC. All Rights Reserved. PO Box 55555 Middle, Indiana 43208 +1.888.555. 1234
+        </p>
     </footer>
 </body>
+
 </html>
