--- a/index.html
+++ b/index.html
@@ -36,10 +36,13 @@
                     <div class="steps">
                         <img id="calendar-pic" src="./assets/images/calendar.png" alt="calendar" />
                         <p>Schedule an appointment for the desired service</p>
+                        <div class="dot-top"></div>
                         <img id="car-pic" src="./assets/images/car.png" alt="car" />
                         <p>We confirm the time and place and drive to you</p>
+                        <div class="dot-bottom"></div>
                         <img id="sponge-pic" src="./assets/images/sponge.png" alt="sponge" />
                         <p>Sit back while your pet is cleaned and pampered</p>
+                        <div class="dot-top"></div>
                         <img id="animated-dog-pic" src="./assets/images/dog-animaged-sm.png" alt="animated dog small" />
                         <p>Your best friend is Spick n' Span!</p>
                     </div>
