fixed captions and yellow image

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 
     <main>
         <section class="main-content">
+            <div class="curve">
+                <img src="./assets/images/header-shape.png" style="width: 110%; height: 450px" alt="yellow curve" />
+            </div>
             <div class="carDog">
                 <img id="car-dog" src="./assets/images/dog-car.jpg" alt="dog with head out of car" />
                 <div class="bring-to-you">Bring the clean directly to you!</p>
@@ -34,17 +37,25 @@
                 <div>
                     <h2>How does it work?</h2>
                     <div class="steps">
-                        <img id="calendar-pic" src="./assets/images/calendar.png" alt="calendar" />
-                        <p>Schedule an appointment for the desired service</p>
+                        <figure>
+                        <p><img id="calendar-pic" src="./assets/images/calendar.png" alt="calendar" />
+                        <figcaption>Schedule an appointment for the desired service</figcaption>
+                        </figure>
                         <div class="dot-top"></div>
-                        <img id="car-pic" src="./assets/images/car.png" alt="car" />
-                        <p>We confirm the time and place and drive to you</p>
+                        <figure>
+                        <p><img id="car-pic" src="./assets/images/car.png" alt="car" />
+                        <figcaption>We confirm the time and place and drive to you</figcaption>
+                        </figure>
                         <div class="dot-bottom"></div>
-                        <img id="sponge-pic" src="./assets/images/sponge.png" alt="sponge" />
-                        <p>Sit back while your pet is cleaned and pampered</p>
+                        <figure>
+                        <p><img id="sponge-pic" src="./assets/images/sponge.png" alt="sponge" />
+                        <figcaption>Sit back while your pet is cleaned and pampered</figcaption>
+                        </figure>
                         <div class="dot-top"></div>
-                        <img id="animated-dog-pic" src="./assets/images/dog-animaged-sm.png" alt="animated dog small" />
-                        <p>Your best friend is Spick n' Span!</p>
+                        <figure>
+                        <p><img id="animated-dog-pic" src="./assets/images/dog-animaged-sm.png" alt="animated dog small" />
+                        <figcaption>Your best friend is Spick n' Span!</figcaption>
+                        </figure>
                     </div>
                 </div>
         </section>
@@ -63,10 +74,12 @@
         </aside>
     </main>
 
+    <section class="footer">
     <footer id="copyright">
         <p>Copyright 2125 Spick n' Span, LLC. All Rights Reserved. PO Box 55555 Middle, Indiana 43208 +1.888.555. 1234
         </p>
     </footer>
+    </section>
 </body>
 
 </html>
