fixing fonts and spacing

--- a/index.html
+++ b/index.html
@@ -12,15 +12,12 @@
 
 <body>
     <header>
-        <section class="curve">
-            <!-- <img src="./assets/images/header-shape.png" alt="yellow curve" /> -->
-        </section>
 
         <nav>
             <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#about" target="_blank">About</a></li>
+                <li><a href="#services" target="_blank">Services</a></li>
+                <li><a href="#contact" target="_blank">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -38,23 +35,24 @@
                     <h2>How does it work?</h2>
                     <div class="steps">
                         <figure>
-                        <p><img id="calendar-pic" src="./assets/images/calendar.png" alt="calendar" />
-                        <figcaption>Schedule an appointment for the desired service</figcaption>
+                            <img id="calendar-pic" src="./assets/images/calendar.png" alt="calendar" />
+                            <figcaption id="cap-cal">Schedule an appointment for the desired service</figcaption>
                         </figure>
                         <div class="dot-top"></div>
                         <figure>
-                        <p><img id="car-pic" src="./assets/images/car.png" alt="car" />
-                        <figcaption>We confirm the time and place and drive to you</figcaption>
+                            <img id="car-pic" src="./assets/images/car.png" alt="car" />
+                            <figcaption id="cap-car">We confirm the time and place and drive to you</figcaption>
                         </figure>
                         <div class="dot-bottom"></div>
                         <figure>
-                        <p><img id="sponge-pic" src="./assets/images/sponge.png" alt="sponge" />
-                        <figcaption>Sit back while your pet is cleaned and pampered</figcaption>
+                            <img id="sponge-pic" src="./assets/images/sponge.png" alt="sponge" />
+                            <figcaption id="cap-sponge">Sit back while your pet is cleaned and pampered</figcaption>
                         </figure>
                         <div class="dot-top"></div>
                         <figure>
-                        <p><img id="animated-dog-pic" src="./assets/images/dog-animaged-sm.png" alt="animated dog small" />
-                        <figcaption>Your best friend is Spick n' Span!</figcaption>
+                            <img id="animated-dog-pic" src="./assets/images/dog-animaged-sm.png"
+                                    alt="animated dog small" />
+                            <figcaption id="cap-dog">Your best friend is Spick n' Span!</figcaption>
                         </figure>
                     </div>
                 </div>
@@ -75,10 +73,11 @@
     </main>
 
     <section class="footer">
-    <footer id="copyright">
-        <p>Copyright 2125 Spick n' Span, LLC. All Rights Reserved. PO Box 55555 Middle, Indiana 43208 +1.888.555. 1234
-        </p>
-    </footer>
+        <footer id="copyright">
+            <p>Copyright 2125 Spick n' Span, LLC. All Rights Reserved. PO Box 55555 Middle, Indiana 43208 +1.888.555.
+                1234
+            </p>
+        </footer>
     </section>
 </body>
 
