--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
         <nav>
             <ul>
-                <li><a href="#about" target="_blank">About</a></li>
-                <li><a href="#services" target="_blank">Services</a></li>
-                <li><a href="#contact" target="_blank">Contact</a></li>
+                <li><a href="#" onclick="alert('About coming soon')">About</a></li>
+                <li><a href="#" onclick="alert('Services coming soon')">Services</a></li>
+                <li><a href="#" onclick="alert('Updated contact soon')">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -25,11 +25,11 @@
     <main>
         <section class="main-content">
             <div class="curve">
-                <img src="./assets/images/header-shape.png" style="width: 110%; height: 450px" alt="yellow curve" />
+                <img src="./assets/images/header-shape.png" style="width: 100%; height: 450px" alt="yellow curve" />
             </div>
             <div class="carDog">
-                <img id="car-dog" src="./assets/images/dog-car.jpg" alt="dog with head out of car" />
-                <div class="bring-to-you">Bring the clean directly to you!</p>
+                <div class="bring-to-you">
+                    <p>Bring the clean directly to you!</p>
                 </div>
                 <div>
                     <h2>How does it work?</h2>
